--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -95,19 +95,19 @@
                 <h1 id="Achievements"> Achievements </h1>
                 <div class="main-box">
                     <div id="box">
-                        <h3>SDFGASDFG</h3>
+                        <h3>Codefest'23</h3>
                         <img src="codefest.jpg" alt="codefest" style="width: 99%;">     
                         <p>Proud to have participated in Code Fest 2023, a thrilling contest where I pushed the boundaries of my coding abilities. Sharpened my skills and loved every minute of the challenge! 💡 </p>
                         <button> <a href="codefest.jpg" style="text-decoration: none; color: white;"> View </a> </button>
                     </div>
                     <div id="box">
-                        <h3>SDFGASDFG</h3>
+                        <h3>Codebees</h3>
                         <img src="codebees.jpg" alt="codebees" style="width: 99%;">
                         <p>I participant in Code bees, where I unleashed my programming skills and battled it out with fellow coders. A true adrenaline rush for any coding enthusiast! </p>
-                        <button> <a href="codebees" style="text-decoration: none; color: white;"> View </a> </button>
+                        <button> <a href="codebees.jpg" style="text-decoration: none; color: white;"> View </a> </button>
                     </div>
                     <div id="box">
-                        <h3>SDFGASDFG</h3>
+                        <h3>PUCON'23</h3>
                         <img src="pucon.jpg" alt="pucon" style="width: 99%;">
                         <p>Participated in PUCON'23, where every algorithm was a challenge and every line of code was a step towards victory. An unforgettable journey into the world of coding! 💫</p>
                         <button> <a href="pucon.jpg" style="text-decoration: none; color: white;"> View </a> </button>
